--- a/courses/angular-complete-guide/recipes-ngrx/src/app/features/auth/components/auth/auth.component.html
+++ b/courses/angular-complete-guide/recipes-ngrx/src/app/features/auth/components/auth/auth.component.html
@@ -44,16 +44,8 @@
 
       <!-- Submit and Switch -->
       <div>
-        <button
-          class="btn btn-primary"
-          type="submit"
-          [disabled]="!authForm.valid"
-        >
-          {{ isLoginMode ? 'Login' : 'Sign Up' }}
-        </button>
-        |
-        <button class="btn btn-primary" (click)="onSwitchMode()" type="button">
-          Switch to {{ isLoginMode ? 'Sign Up' : 'Login' }}
+        <button class="btn btn-primary" type="submit" [disabled]="!authForm.valid">
+          Login
         </button>
       </div>
 
