--- a/courses/angular-complete-guide/recipes-ngrx/src/app/features/recipes/components/details/details.component.html
+++ b/courses/angular-complete-guide/recipes-ngrx/src/app/features/recipes/components/details/details.component.html
@@ -1,5 +1,10 @@
-<div class="row">
-  <div class="col-xs-12">
+
+<div class="row" *ngIf="recipe">
+  <div class="col-12">
+    <h1>{{ recipe.name }}</h1>
+  </div>
+
+  <div class="col-12 my-3">
     <img
       [src]="recipe.imagePath"
       alt="{{ recipe.name }}"
@@ -7,54 +12,50 @@
       style="max-height: 300px;"
     >
   </div>
-</div>
 
-<div class="row">
-  <div class="col-xs-12">
-    <h1>{{ recipe.name }}</h1>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-xs-12">
-    <div class="btn-group" appDropdown>
-      <button type="button" class="btn btn-primary dropdown-toggle">
+  <div class="col-12 my-3">
+    <div
+      class="dropdown"
+      appDropdown
+      #dropdown="appDropdown"
+    >
+      <button
+        type="button"
+        class="btn btn-primary dropdown-toggle"
+        [class.show]="dropdown.isOpen"
+        (click)="dropdown.toggle()"
+      >
         Manage Recipe <span class="caret"></span>
       </button>
-      <ul class="dropdown-menu">
+      <ul
+        class="dropdown-menu"
+        [class.show]="dropdown.isOpen"
+      >
         <li>
-          <a (click)="onAddToShoppingList()" class="pointer">
-            To Shopping List
-          </a>
+          <a class="pointer" (click)="onAddToShoppingList()">To Shopping List</a>
         </li>
         <li>
-          <a class="pointer" (click)="onEditRecipe()">
-            Edit Recipe
-          </a>
+          <a class="pointer" (click)="onEditRecipe()">Edit Recipe</a>
         </li>
         <li>
-          <a class="pointer" (click)="onDeleteRecipe()">
-            Delete Recipe
-          </a>
+          <a class="pointer" (click)="onDeleteRecipe()">Delete Recipe</a>
         </li>
       </ul>
     </div>
   </div>
-</div>
 
-<div class="row">
-  <div class="col-xs-12">
+  <div class="col-12 my-3">
     {{ recipe.description }}
   </div>
-</div>
 
-<div class="row">
-  <div class="col-xs-12">
+  <div class="col-12">
+    <h2 class="mb-3">Ingredients</h2>
     <ul class="list-group">
       <li
+        *ngFor="let ingredient of recipe.ingredients"
         class="list-group-item"
-        *ngFor="let ingredient of recipe.ingredients">
-        {{ ingredient.name }} - {{ ingredient.amount }}
+      >
+        {{ ingredient.name }}: <strong>{{ ingredient.amount }}</strong>
       </li>
     </ul>
   </div>
