--- a/courses/angular-complete-guide/recipes-ngrx/src/app/features/recipes/components/list/list.component.html
+++ b/courses/angular-complete-guide/recipes-ngrx/src/app/features/recipes/components/list/list.component.html
@@ -1,12 +1,10 @@
-<div class="row">
+<div class="row mt-2 mb-4">
   <div class="col">
     <button class="btn btn-success" (click)="onNewRecipe()">
       New Recipe
     </button>
   </div>
 </div>
-
-<hr>
 
 <div class="row">
   <div class="col">
