--- a/courses/angular-complete-guide/recipes-ngrx/src/app/app.component.html
+++ b/courses/angular-complete-guide/recipes-ngrx/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col">
+    <div class="col pb-5">
       <router-outlet></router-outlet>
     </div>
   </div>
