--- a/courses/angular-complete-guide/recipes-ngrx/src/app/features/recipes/components/list/list.component.html
+++ b/courses/angular-complete-guide/recipes-ngrx/src/app/features/recipes/components/list/list.component.html
@@ -10,7 +10,7 @@
   <div class="col">
     <div class="list-group">
       <app-recipe-item
-        *ngFor="let recipe of recipes"
+        *ngFor="let recipe of recipes$ | async"
         [recipe]="recipe"
         [isActive]="false"
       ></app-recipe-item>
