--- a/courses/angular-complete-guide/recipes-ngrx/src/app/features/recipes/components/edit/edit.component.html
+++ b/courses/angular-complete-guide/recipes-ngrx/src/app/features/recipes/components/edit/edit.component.html
@@ -59,7 +59,7 @@
       </div>
 
       <!-- Ingredients -->
-      <div class="row mt-3 focused">
+      <div class="row mt-3">
         <div class="col-12">
           <h2>
             Ingredients
@@ -71,28 +71,26 @@
             class="row form-group"
             *ngFor="let ingredientCtrl of ingredientsControls; let i = index"
             [formGroupName]="i"
-            style="margin-top: 10px;"
           >
-            <div class="col-8">
-              <label for="name-{{ i }}">Name</label>
+            <div class="col-7">
               <input
                 type="text"
                 class="form-control"
                 id="name-{{ i }}"
                 formControlName="name"
+                placeholder="Name..."
               />
             </div>
-            <div class="col-2">
-              <label for="amount-{{ i }}">Amount</label>
+            <div class="col-3">
               <input
                 type="number"
                 class="form-control"
                 id="amount-{{ i }}"
                 formControlName="amount"
+                placeholder="Amount..."
               />
             </div>
             <div class="col-2">
-              <label for="delete-{{ i }}">Delete?</label>
               <div>
                 <button
                   type="button"
