--- a/courses/angular-complete-guide/recipes-ngrx/src/styles.scss
+++ b/courses/angular-complete-guide/recipes-ngrx/src/styles.scss
@@ -13,14 +13,6 @@ textarea.ng-invalid.ng-touched {
 
 .form-group {
   margin: 1rem 0;
-  padding: 1rem;
-  border-radius: 0.5rem;
-  transition: 0.15 background-color ease-out;
-  box-shadow: 1px 1px 1px 2px rgba(0,0,0,0.1);
-
-  &:focus-within {
-    background-color: rgba(0,0,0,0.04);
-  }
 }
 
 .form-group label {
@@ -29,10 +21,10 @@ textarea.ng-invalid.ng-touched {
   margin-bottom: 0.3rem;
 }
 
-.btn {
-  padding: 0.5rem 1.2rem;
+::placeholder {
+  font-style: italic;
 }
 
-.focused:focus-within {
-  background-color: yellow!important;
+.btn {
+  padding: 0.5rem 1.2rem;
 }
