--- a/courses/angular-complete-guide/recipes-ngrx/src/app/app.component.html
+++ b/courses/angular-complete-guide/recipes-ngrx/src/app/app.component.html
@@ -7,3 +7,8 @@
     </div>
   </div>
 </div>
+
+<app-alerts
+  [alerts]="alertsService.alerts$ | async"
+  (dismissed)="alertsService.dismiss($event)"
+></app-alerts>
