--- a/courses/angular-complete-guide/recipes-ngrx/src/app/core/features/alerts/components/alert/alert.component.html
+++ b/courses/angular-complete-guide/recipes-ngrx/src/app/core/features/alerts/components/alert/alert.component.html
@@ -1,3 +1,4 @@
 <div class="alert alert-{{ type }}" role="alert">
   {{ message }}
+  <button class="-dismiss" (click)="dismissed.emit()">&times;</button>
 </div>
