--- a/courses/angular-complete-guide/recipes-ngrx/src/app/features/recipes/components/edit/edit.component.html
+++ b/courses/angular-complete-guide/recipes-ngrx/src/app/features/recipes/components/edit/edit.component.html
@@ -124,7 +124,7 @@
           <button
             type="submit"
             class="btn btn-success ml-3"
-            [disabled]="!recipeForm.valid"
+            [disabled]="recipeForm.invalid"
           >
             Save
           </button>
