--- a/courses/angular-complete-guide/recipes-ngrx/src/app/features/shopping-list/components/item-edit/item-edit.component.html
+++ b/courses/angular-complete-guide/recipes-ngrx/src/app/features/shopping-list/components/item-edit/item-edit.component.html
@@ -1,9 +1,8 @@
 <div class="row">
   <div class="col">
-    <form (ngSubmit)="onSubmit(itemForm)" #itemForm="ngForm">
-      <pre>{{ itemForm.errors | json }}</pre>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
       <div class="row">
-        <div class="col-sm-7 form-group">
+        <div class="col-7 form-group">
 
           <!-- Name -->
           <label for="name">Name</label>
@@ -11,24 +10,18 @@
             type="text"
             id="name"
             class="form-control"
-            name="name"
-            ngModel
-            required
-            [value]="currentIngredient?.name"
+            formControlName="name"
           >
         </div>
 
         <!-- Amount -->
-        <div class="col-sm-5 form-group">
+        <div class="col-5 form-group">
           <label for="amount">Amount</label>
           <input
             type="number"
             id="amount"
             class="form-control"
-            name="amount"
-            ngModel
-            required
-            [value]="currentIngredient?.amount"
+            formControlName="amount"
           >
         </div>
       </div>
@@ -43,14 +36,23 @@
           &nbsp;
 
           <!-- Delete -->
-          <button *ngIf="editMode" type="button" class="btn btn-danger" (click)="onDelete()">
+          <button
+            *ngIf="editMode"
+            type="button"
+            class="btn btn-danger"
+            (click)="onDelete()"
+          >
             Delete
           </button>
 
           &nbsp;
 
           <!-- Submit -->
-          <button class="btn btn-success" type="submit" [disabled]="itemForm.invalid">
+          <button
+            type="submit"
+            [disabled]="form.invalid"
+            class="btn btn-success"
+          >
             {{ editMode ? 'Update' : 'Add' }}
           </button>
 
