--- a/courses/angular-complete-guide/recipes-ngrx/src/app/features/shopping-list/components/list/list.component.html
+++ b/courses/angular-complete-guide/recipes-ngrx/src/app/features/shopping-list/components/list/list.component.html
@@ -1,8 +1,16 @@
-<div class="row">
+<div class="row" *ngIf="!isLoading; else loadingRef">
   <div class="col-6 offset-3">
-    <app-shopping-list-item-edit></app-shopping-list-item-edit>
 
-    <div class="list-group mt-4">
+    <app-shopping-list-item-edit
+      (submitted)="onFormSubmitted()"
+    ></app-shopping-list-item-edit>
+
+    <hr>
+
+    <div
+      *ngIf="ingredients?.length; else noIngredientsRef"
+      class="list-group mt-4"
+    >
       <div
         *ngFor="let ingredient of ingredients; let i = index"
         class="list-group-item pointer"
@@ -15,3 +23,35 @@
 
   </div>
 </div>
+
+<!-- Template: loading -->
+<ng-template #loadingRef>
+  <div class="row">
+    <div class="col-6 offset-3">
+      <div class="row">
+        <div class="col-7">
+          <app-skeleton width="100%" height="3rem"></app-skeleton>
+        </div>
+        <div class="col-5">
+          <app-skeleton width="100%" height="3rem"></app-skeleton>
+        </div>
+        <div class="col-12 d-flex justify-content-end">
+          <app-skeleton width="4rem" height="2rem"></app-skeleton>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <app-skeleton width="100%" height="3rem"></app-skeleton>
+          <app-skeleton width="100%" height="3rem"></app-skeleton>
+          <app-skeleton width="100%" height="3rem"></app-skeleton>
+        </div>
+      </div>
+    </div>
+  </div>
+</ng-template>
+
+<!-- Template: No ingredients -->
+<ng-template #noIngredientsRef>
+  No ingredients
+</ng-template>
