--- a/ngrx/books/src/app/components/books-list/books-list.component.scss
+++ b/ngrx/books/src/app/components/books-list/books-list.component.scss
@@ -1,10 +1,11 @@
 .book {
-  margin: 0.5rem 0;
+  margin: 1rem 0;
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
   border: 1px solid #ccc;
   display: flex;
   align-items: center;
+  box-shadow: 2px 2px 5px rgba(0,0,0,0.15);
 
   &__info {
     flex-grow: 1;
@@ -23,11 +24,18 @@
   }
 
   &__action {
-    border: 4px solid rgba(0,0,0,0.2);
+    border: 4px solid rgb(206, 90, 90);
+    color: white;
+    background-color: rgba(255, 108, 108);
     padding: 0.5rem 1rem;
     border-radius: 100px;
     font-size: 16px;
     line-height: 16px;
-    background-color: rgba(255, 108, 108);
+    cursor: pointer;
+    transition: 0.15s all ease-out;
+
+    &:hover {
+      background-color: rgb(206, 90, 90);
+    }
   }
 }
