--- a/ngrx/books/src/app/shared/components/button/button.component.scss
+++ b/ngrx/books/src/app/shared/components/button/button.component.scss
@@ -4,8 +4,8 @@
   background-color: var(--color-primary);
   padding: 0.5rem 1rem;
   border-radius: 100px;
-  font-size: var(--font-size);
-  line-height: var(--font-size);
+  font-size: var(--font-size-small);
+  line-height: var(--font-size-small);
   cursor: pointer;
   transition: var(--transition);
 
