--- a/ngrx/books/src/styles.scss
+++ b/ngrx/books/src/styles.scss
@@ -6,6 +6,7 @@
   --color-foreground: #303030;
 
   --font-size: 18px;
+  --font-size-small: 15px;
   --font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
   --transition: 0.15s all ease-out;
