--- a/experiments/floating-ui/src/app/app.component.html
+++ b/experiments/floating-ui/src/app/app.component.html
@@ -26,24 +26,24 @@
   &nbsp;
 
   <!-- Floating target #1 -->
-  <!-- <ng-template appFloatingTemplate="floating-1">
-    <div appFloatingTarget="floating-1" class="floating-target">
+  <ng-template appFloatingTemplate="floating-1">
+    <div appFloatingTarget="floating-1" placemenet="bottom" class="floating-target">
       <strong>#1</strong> This is a somewhat long tooltip content.
     </div>
-  </ng-template> -->
+  </ng-template>
 
   <!-- Floating trigger #2 -->
-  <button
+  <!-- <button
     appFloatingTrigger="floating-2"
     triggerOn="hover"
     class="floating-trigger"
   >
     Trigger #2
-  </button>
+  </button> -->
 
   <!-- Floating target #2 -->
   <!-- <ng-template appFloatingTemplate="floating-2">
-    <div appFloatingTarget="floating-2" class="floating-target">
+    <div appFloatingTarget="floating-2" placement="bottom" class="floating-target">
       <strong>#2</strong> This is a somewhat long tooltip content.
     </div>
   </ng-template> -->
@@ -64,17 +64,3 @@
 
 <!-- Floating host -->
 <app-floating-host></app-floating-host>
-
-<!-- Floating target #1 -->
-<ng-template appFloatingTemplate="floating-1">
-  <div appFloatingTarget="floating-1" class="floating-target">
-    <strong>#1</strong> This is a somewhat long tooltip content.
-  </div>
-</ng-template>
-
-<!-- Floating target #2 -->
-<ng-template appFloatingTemplate="floating-2">
-  <div appFloatingTarget="floating-2" class="floating-target">
-    <strong>#2</strong> This is a somewhat long tooltip content.
-  </div>
-</ng-template>
