--- a/experiments/floating-ui/src/app/app.component.html
+++ b/experiments/floating-ui/src/app/app.component.html
@@ -27,7 +27,7 @@
 
   <!-- Floating target #1 -->
   <ng-template appFloatingTemplate="floating-1">
-    <div appFloatingTarget="floating-1" placemenet="bottom" class="floating-target">
+    <div appFloatingTarget="floating-1" placement="bottom-right" class="floating-target">
       <strong>#1</strong> This is a somewhat long tooltip content.
     </div>
   </ng-template>
