--- a/courses/angular-tdd/hoaxify/src/app/sign-up/sign-up.component.html
+++ b/courses/angular-tdd/hoaxify/src/app/sign-up/sign-up.component.html
@@ -1,17 +1,52 @@
-<h1>Sign Up</h1>
+<div class="card col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+  <div class="card-header">
+    <h1>Sign Up</h1>
+  </div>
 
-<form (submit)="onSubmit($event)">
-  <label for="username">Username</label>
-  <input id="username" type="text" (input)="onChangeUsername($event)">
+  <div class="card-body p-4">
+    <form (submit)="onSubmit($event)">
 
-  <label for="email">Email</label>
-  <input id="email" type="email" (input)="onChangeEmail($event)">
+      <!-- Username -->
+      <label for="username" class="form-label">Username</label>
+      <input
+        id="username"
+        type="text"
+        (input)="onChangeUsername($event)"
+        class="form-control"
+      >
 
-  <label for="password">Password</label>
-  <input id="password" type="password" (input)="onChangePassword($event)">
+      <!-- Email -->
+      <label for="email" class="form-label">Email</label>
+      <input
+        id="email"
+        type="email"
+        (input)="onChangeEmail($event)"
+        class="form-control"
+      >
 
-  <label for="password-confirm">Confirm Password</label>
-  <input id="password-confirm" type="password" (input)="onChangeConfirmPassword($event)">
+      <!-- Password -->
+      <label for="password" class="form-label">Password</label>
+      <input
+        id="password"
+        type="password"
+        (input)="onChangePassword($event)"
+        class="form-control"
+      >
 
-  <button type="submit" [disabled]="disabled">Sign Up</button>
-</form>
+      <!-- Confirm Password -->
+      <label for="password-confirm" class="form-label">Confirm Password</label>
+      <input
+        id="password-confirm"
+        type="password"
+        (input)="onChangeConfirmPassword($event)"
+        class="form-control"
+      >
+
+      <div class="mt-3 d-flex justify-content-end">
+        <button type="submit" [disabled]="disabled" class="btn btn-primary">
+          Sign Up
+        </button>
+      </div>
+    </form>
+  </div>
+</div>
