--- a/courses/angular-tdd/hoaxify/src/app/sign-up/sign-up.component.html
+++ b/courses/angular-tdd/hoaxify/src/app/sign-up/sign-up.component.html
@@ -43,8 +43,16 @@
       >
 
       <div class="mt-3 d-flex justify-content-end">
-        <button type="submit" [disabled]="disabled" class="btn btn-primary">
+        <button type="submit" [disabled]="loading || disabled" class="btn btn-primary">
           Sign Up
+
+          <!-- Spinner -->
+          <span
+            *ngIf="loading"
+            class="spinner-border spinner-border-sm"
+            role="status"
+            aria-hidden="true"
+          ></span>
         </button>
       </div>
     </form>
