--- a/courses/angular-tdd/hoaxify/src/app/sign-up/sign-up.component.html
+++ b/courses/angular-tdd/hoaxify/src/app/sign-up/sign-up.component.html
@@ -1,4 +1,14 @@
-<div class="card col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+<ng-template #successAlertRef>
+  <div class="alert alert-success" role="alert">
+    Please check your email to activate your account
+  </div>
+</ng-template>
+
+<div
+  *ngIf="response !== 'success'; else successAlertRef"
+  class="card col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3"
+  data-test-id="signup-form"
+>
   <div class="card-header">
     <h1>Sign Up</h1>
   </div>
