Adjust tests to SCAM pattern

--- a/courses/angular-tdd/hoaxify/src/app/features/sign-up/sign-up.component.html
+++ b/courses/angular-tdd/hoaxify/src/app/features/sign-up/sign-up.component.html
@@ -7,7 +7,7 @@
 <div
   *ngIf="response !== 'success'; else successAlertRef"
   class="card col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3"
-  data-test-id="signup-form"
+  data-testid="signup-form"
 >
   <div class="card-header">
     <h1>Sign Up</h1>
