--- a/experiments/tailwind-setup/src/app/app.component.html
+++ b/experiments/tailwind-setup/src/app/app.component.html
@@ -2,7 +2,7 @@
   Hello world!
 </h1>
 
-<hr>
+<hr class="my-8">
 
 <figure class="w-2/5 border-2 bg-slate-100 rounded-xl p-8 dark:bg-slate-800">
   <img class="w-24 h-24 rounded-full mx-auto" src="https://via.placeholder.com/384/512" alt="" width="384" height="512">
@@ -19,6 +19,30 @@
         Jane Doe
       </div>
       <div class="text-slate-700 dark:text-slate-500">
+        Staff Engineer, ACME Inc.
+      </div>
+    </figcaption>
+  </div>
+</figure>
+
+<hr class="my-8">
+
+<!-- TODO: Try styling this via @apply and @extend -->
+<figure class="my-figure">
+  <img src="https://via.placeholder.com/384/512" alt="" width="384" height="512">
+  <div>
+    <blockquote>
+      <p>
+        “Tailwind CSS is the only framework that I've seen scale
+        on large teams. It's easy to customize, adapts to any design,
+        and the build size is tiny.”
+      </p>
+    </blockquote>
+    <figcaption>
+      <div>
+        Jane Doe
+      </div>
+      <div>
         Staff Engineer, ACME Inc.
       </div>
     </figcaption>
