Add first Firestore query

--- a/courses/firebase-in-depth/courses-app/src/app/features/settings/settings.component.html
+++ b/courses/firebase-in-depth/courses-app/src/app/features/settings/settings.component.html
@@ -9,3 +9,7 @@
 </button>
 
 <pre *ngIf="courses$">{{ courses$ | async | json }}</pre>
+
+<button type="button" (click)="onSearchDatabase()">
+  Search on the database (check console)
+</button>
