Add Firebase query example

--- a/courses/firebase-in-depth/courses-app/src/app/features/settings/settings.component.html
+++ b/courses/firebase-in-depth/courses-app/src/app/features/settings/settings.component.html
@@ -13,3 +13,11 @@
 <button type="button" (click)="onSearchDatabase()">
   Search on the database (check console)
 </button>
+
+<button type="button" (click)="onFetchNestedCollection()">
+  Fetch lessons for specific course (check console)
+</button>
+
+<button type="button" (click)="onSearchNestedCollection()">
+  Search lessons for first course (check console)
+</button>
